src/styles.sass
@import "~codemirror/lib/codemirror"
@import "app/editor/codemirror-theme"

.CodeMirror
    font-size: 1.5rem
    .runned
        background-color: #ffff002b
        .CodeMirror-linenumber.CodeMirror-gutter-elt
            background-color: #ffff002b
    .next
        background-color: #00ff002b
        .CodeMirror-linenumber.CodeMirror-gutter-elt
            background-color: #00ff002b

mat-toolbar a
    span
        position: relative
    span::before
        content: ""
        position: absolute
        height: 2px
        bottom: -5px
        left: -4px
        right: -4px
        background-color: #fff
        visibility: hidden
        transform: scaleX(0)
        transition: all 0.3s ease-in-out 0s
    &.active span::before
        visibility: visible
        transform: scaleX(1)

::-webkit-scrollbar 
    width:  6px
    height: 6px

::-webkit-scrollbar-thumb 
    background: #5a5a5a
    border-radius: 3px
    &:hover
        background: #707070

::-webkit-scrollbar-track 
    background: transparent
::-webkit-scrollbar-track-piece 
    &:start, &:end
        &:hover
            background: #ffffff10

sup, sub
    line-height: 0

